# kadaigpt

./: .gitignore  AI_AGENT_ARCHITECTURE.md  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCEMENT_TODO.md  HACKATHON_PRESENTATION.md  IMPLEMENTATION_SUMMARY.md  KADAIGPT_PRODUCT_VALIDATION.md  KNOWN_ISSUES.md  KadaiGPT_Pitch_Slide.html  PITCH.md  PRESENTATION.md  PRODUCTION_READINESS_AUDIT.md  Procfile  README.md  SAAS_TRANSFORMATION_STRATEGY.md  SCORE_TRACKER.md  TESTING_CHECKLIST.md  WHATSAPP_SETUP.md  docker-compose.evolution.yml  nixpacks.toml  railway.json  render.yaml  requirements.txt  runtime.txt  vercel.json
backend/: .env.example  .gitignore  Procfile  main.py  pyproject.toml  requirements.txt  run_tests.py  start.sh
backend/app/: __init__.py  config.py  database.py  main.py  rbac.py
backend/app/agents/: __init__.py  inventory_agent.py  ocr_agent.py  offline_agent.py  print_agent.py  thermal_printer.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: __init__.py  subscription.py
backend/app/routers/: __init__.py  agents.py  analytics.py  audit.py  auth.py  backup.py  bills.py  bulk.py  credit.py  customers.py  dashboard.py  gst.py  inapp_notifications.py  notifications.py  ocr.py  print.py  privacy.py  products.py  subscription.py  suppliers.py  telegram.py  whatsapp.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  credit_engine.py  (+8 more)
backend/tests/: __init__.py  test_analytics.py  test_auth.py  test_bills.py  test_integration.py  test_notifications.py  test_products.py  test_security.py
(+147 files in other folders)
